tests/ui/parser/removed-syntax-ptr-lifetime.stderr
error: expected one of `!`, `(`, `::`, `;`, `<`, `is`, or `where`, found `/`
  --> $DIR/removed-syntax-ptr-lifetime.rs:1:22
   |
LL | type bptr = &lifetime/isize;
   |                      ^ expected one of 7 possible tokens

error: aborting due to previous error

